--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.10.0
 bs4==0.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.7
+dataclasses==0.6
 idna==3.3
 numpy==1.21.4
 requests==2.26.0
