--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ bs4==0.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.7
 dataclasses==0.6
+hiredis==2.0.0
 idna==3.3
 numpy==1.21.4
+prettytable==2.4.0
+redis==3.5.3
+redisgraph==2.4.2
 requests==2.26.0
 soupsieve==2.3.1
 urllib3==1.26.7
+wcwidth==0.2.5
