--- a/wiki-scraper/requirements.txt
+++ b/wiki-scraper/requirements.txt
@@ -1,15 +1,26 @@
+anyio==3.3.4
+asgiref==3.4.1
 beautifulsoup4==4.10.0
 bs4==0.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.7
+click==8.0.3
+confluent-kafka==1.7.0
 dataclasses==0.6
+fastapi==0.70.0
+h11==0.12.0
 hiredis==2.0.0
 idna==3.3
 numpy==1.21.4
 prettytable==2.4.0
+pydantic==1.8.2
 redis==3.5.3
 redisgraph==2.4.2
 requests==2.26.0
+sniffio==1.2.0
 soupsieve==2.3.1
+starlette==0.16.0
+typing_extensions==4.0.0
 urllib3==1.26.7
+uvicorn==0.15.0
 wcwidth==0.2.5
