--- a/wiki-scraper/requirements.txt
+++ b/wiki-scraper/requirements.txt
@@ -7,10 +7,14 @@ charset-normalizer==2.0.7
 click==8.0.3
 confluent-kafka==1.7.0
 dataclasses==0.6
+dataclasses-json==0.5.6
 fastapi==0.70.0
 h11==0.12.0
 hiredis==2.0.0
 idna==3.3
+marshmallow==3.14.1
+marshmallow-enum==1.5.1
+mypy-extensions==0.4.3
 numpy==1.21.4
 prettytable==2.4.0
 pydantic==1.8.2
@@ -20,6 +24,7 @@ requests==2.26.0
 sniffio==1.2.0
 soupsieve==2.3.1
 starlette==0.16.0
+typing-inspect==0.7.1
 typing_extensions==4.0.0
 urllib3==1.26.7
 uvicorn==0.15.0
